<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Detailactivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/mytoolkit"
        android:background="@color/colorAccent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img" />

            <Button
                android:id="@+id/detailfav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_favorite_border_black_24dp"
                android:onClick="onfav" />

            <TextView
                android:id="@+id/dettextname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/textDet"
                android:textSize="@dimen/dettextsize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tags"
                    android:textColor="@color/textDet"
                    android:textSize="@dimen/dettextsize" />

                <TextView
                    android:id="@+id/dettexttag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nationality"
                    android:textColor="@color/textDet"
                    android:textSize="@dimen/dettextsize" />

                <TextView
                    android:id="@+id/dettextcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="@color/textDet"
                    android:textSize="@dimen/dettextsize" />

                <TextView
                    android:id="@+id/dettextcat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions"
                    android:textColor="@color/textDet"
                    android:textSize="@dimen/dettextsize" />

                <TextView
                    android:id="@+id/dettextinst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/paddingBottom" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/youtubeurl"
                    android:textColor="@color/textDet"
                    android:textSize="@dimen/dettextsize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/youWidth"
                        android:layout_height="@dimen/youHeight"
                        android:contentDescription="@string/imageview"
                        android:src="@drawable/youtube" />

                    <TextView
                        android:id="@+id/dettextuurl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/detTextUrl" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editfeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_feedback_here" />

                    <Button
                        android:id="@+id/butfeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/send"
                        android:onClick="sendfeedback" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>